--- a/doublePointer.html
+++ b/doublePointer.html
@@ -25,9 +25,9 @@
 </head>
 
 <body class="bg scrollbar scrollbar_style">
-  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -42,22 +42,21 @@
     <a href="functions.html">פונקציות</a>
     <a href="recursion.html">רקורסיות</a>
     <a href="pointers.html">מצביעים</a>
-    <a href="doublePointer.html">מצביע כפול</a>
+    <a href="doublePointer.html"><span class="colorcheck">מצביע כפול</span></a>
     <a href="arrays.html">מערכים</a>
     <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
+  <section id="main" onclick="openOrCloseNav(0)">
 
-  <section id="main">
-
-    <h1 class="head-left">Lets learn C</h1>
+    <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">מצביע כפול</h1>
 
     <div class="First-Para">
