--- a/mergeSort.html
+++ b/mergeSort.html
@@ -24,9 +24,9 @@
 </head>
 
 <body class="bg-five scrollbar scrollbar_style">
-  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -44,150 +44,152 @@
     <a href="doublePointer.html">מצביע כפול</a>
     <a href="arrays.html">מערכים</a>
     <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
     <a href="quickSort.html">מיון מהיר</a>
-    <a href="mergeSort.html">מיון מיזוג</a>
+    <a href="mergeSort.html"><span class="colorcheck">מיון מיזוג</span></a>
   </div>
-  <h1 class="top-left">Lets learn C</h1>
+  <section id="main" onclick="openOrCloseNav(0)">
+    <h1 class="top-left">Let's learn C</h1>
 
-  <h2 class="top-right-head">מיון מיזוג</h2>
+    <h2 class="top-right-head">מיון מיזוג</h2>
 
-  <p class="top-right">
-    <br>
-    מיון מיזוג הינו מיון מבוסס השוואות והוא עובד בשיטה הבאה :
-    <br>
-    חשוב לציין, שסדר הגודל של מיון מיזוג עומד על O(nlog(n)) מבחינת יעילות זמן ריצה.
-    <br>
-    <br>
-    אנו מקבלים מערך ומתחילים למיין אותו על ידי פירוק הבעיה לחלקים קטנים יותר ועבודה עליהם.
-    <br>
-    אם למשל יש לנו מערך בגודל 8 אז אנו "חותכים" את המערך ל חצי כלומר שני מערכים בגודל 4 ועובדים עליהם.
-    <br>
-    לאחר מכן על כל אחד מהמערכים האלה אנו "חותכים אותם" שוב לחצי כלומר נקבל ארבעה מערכים בגודל 2.
-    <br>
-    ברגע שהגענו למערכים בגודל 2 אנו נעשה השוואות
-    <br>
-    (אם משהו לא מובן בחלק הזה, אנו ממליצים לחזור לדף <a class="recursion" href="recursion.html">רקורסיה</a> ולנסות להבין
-    קצת יותר לעומק על איך רקורסיה עובדת).
-    <br>
-    <br>
-    אחרי שסיימנו "לחצות" את המערכים ועשינו את ההשוואות הראשונות אנו כעת מתחילים עם פעולת המיזוג בין
-    <br>
-    המערכים , כלומר מתוך ארבעת המערכים בגודל 2 אנו עכשיו מתחילים למזג ביניהם בצורה הבאה :
-    <br>
-    השוואה תתבצע בצורה הבאה – לשם הנוחות נקרא למערכים שלנו א' וב'.
-    <br>
-    האיבר באינדקס 0 של מערך א' אל מול האיבר באינדקס 0 של מערך ב'.
-    <br>
-    האינדקס של הקטן מבין הערכים יתקדם (כלומר, אם היה לנו במערך א' אינדקס 0 את הערך 8 אל מול מערך ב' באינדקס 0 שבו 6
-    – האינדקס של מערך ב' יתקדם).
-    <br>
-    לאחר שאחד מהמערכים שלנו הסתיים (כלומר, האינדקס שלו חרג מגבולות גודל המערך) , תיעשה העתקה של שאר האיברים שנותרו
-    במערך השני (כמובן, תוך כדי שמירה על המיון).
-    <br>
-    נסביר במילים את מה שקורה בחלק הזה ולאחר מכן נראה דוגמה:
-    <br>
-    <br>
-    באופן רקורסיבי - פירקנו את כל המערך שלנו לתתי מערכים בגודל 2.
-    <br>
-    לאחר מכן, ביצענו מיון על המערכים הללו.
-    <br>
-    לאחר מכן, מיזגנו בין מערכים כדי לחזור לגודל 4 – תוך כדי שמירה על המיון.
-    <br>
-    בשלב הבא , אנו חוזרים למערך שלם בגודל 8 – ומכיוון שבכל תת שלב במיזוג המערכים שלנו היו ממוינים אז גם
-    <br>
-    המערך השלם שלנו הוא ממוין.
-    <br>
-    ובכך מיינו את המערך.
-    <br>
-    <br>
-    דוגמה לביצוע:
-    <br>
-    <img src="assest/tableForMergeSort/1.png" alt="">
-    <br>
-    <br>
-    התחלנו עם מערך בגודל 8 וכעת אנו נחצה את המערך לשני מערכים ונקבל:
-    <br>
-    <img src="assest/tableForMergeSort/3.png" alt=""> <img src="assest/tableForMergeSort/2.png" alt="">
-    <br>
-    את שני המערכים שלנו נחצה שוב ונקבל:
-    <br>
-    <img src="assest/tableForMergeSort/4.png" alt="">
-    <br>
-    <br>
-    <br>
-    כעת אנו נתחיל בהשוואות:
-    <br>
-    <img src="assest/tableForMergeSort/5.png" alt="">
-    <br>
-    מערך א' – 2 קטן מ16 ולכן יהיה באינדקס 0 , 16 גדול מ 2 ולכן יהיה באינדקס 1.
-    <br>
-    מערך ב' – 4 קטן מ7 ולכן יהיה באינדקס 0 , 7 גדול מ 4 ולכן יהיה באינדקס 1.
-    <br>
-    <img src="assest/tableForMergeSort/6.png" alt="">
-    <br>
-    <br>
-    <br>
-    כעת אנו נתחיל להשוות בין שני המערכים האלה ולהכניס אותם לתוך מערך בגודל 4 (כאן מתבצע המיזוג).
-    נשווה את שני האיברים הראשונים בכל מערך (אינדקס 0) ונגלה ש2 קטן מ4 ולכן נכניס את 2 לתא הראשון(אינדקס 0) ונקדם את
-    האינדקס של מערך א':
-    <br>
-    <img src="assest/tableForMergeSort/7.png" alt="">
-    <br>
-    נמשיך באותה הצורה:
-    מערך א' – האיבר באינדקס 1 (16) גדול מהאיבר באינדקס 0 (4) של המערך השני, ולכן נכניס את 4 לתוך המערך החדש שלנו,
-    ונקדם את האינדקס של מערך ב'.
-    <br>
-    <img src="assest/tableForMergeSort/8.png" alt="">
-    <br>
-    נמשיך בצורה הזאת עד לקבלת:
-    <br>
-    <img src="assest/tableForMergeSort/9.png" alt="">
-    <br>
-    <br>
-    <br>
-    כעת סיימנו עם החלק השמאלי של המערך ועכשיו נעבור לחלק הימני של מערך ונבצע בדיוק את אותן הפעולות.
-    <br>
-    המערכים שלנו הינם המערכים :
-    <br>
-    <img src="assest/tableForMergeSort/10.png" alt="">
-    <br>
-    אחרי ההשוואות אצל כל אחד המערכים שלנו יראו ככה :
-    <br>
-    <img src="assest/tableForMergeSort/11.png" alt="">
-    <br>
-    כאשר אנו נכניס אותם למערך חדש אנו נקבל את המערך הבא:
-    <br>
-    <img src="assest/tableForMergeSort/12.png" alt="">
-    <br>
-    <br>
-    <br>
-    נותרנו עם שני מערכים ממויינים בגודל 4 וכל שנותר לעשות הוא למזג אותם.
-    המערכים הם:
-    <br>
-    <img src="assest/tableForMergeSort/13.png" alt="">
-    <br>
-    <br>
-    <br>
-    כמו שעשינו קודם לכן, ניצור מיזוג בין שני המערכים האלו לתוך מערך בגודל 8:
-    (נבדוק אינדקס מול אינדקס ונקדם את האינדקס שערך איברו היה הנמוך יותר).
-    <br>
-    <img src="assest/tableForMergeSort/14.png" alt="">
-    <br>
-    <br>
-    <br>
-    דוגמה לקוד של מיון מיזוג:
-    <br>
-    זה דוגמה לקוד שמבצע את חציית המערך ל2 חלקים – חלק שמאלי וחלק ימני.
-    <br>
-    רואים שהקוד הזה בנוי כרקורסיה וזו הדרך לבצע את המיון הזה.
-    <br>
-    <!--CODE
+    <p class="top-right">
+      <br>
+      מיון מיזוג הינו מיון מבוסס השוואות והוא עובד בשיטה הבאה :
+      <br>
+      חשוב לציין, שסדר הגודל של מיון מיזוג עומד על O(nlog(n)) מבחינת יעילות זמן ריצה.
+      <br>
+      <br>
+      אנו מקבלים מערך ומתחילים למיין אותו על ידי פירוק הבעיה לחלקים קטנים יותר ועבודה עליהם.
+      <br>
+      אם למשל יש לנו מערך בגודל 8 אז אנו "חותכים" את המערך ל חצי כלומר שני מערכים בגודל 4 ועובדים עליהם.
+      <br>
+      לאחר מכן על כל אחד מהמערכים האלה אנו "חותכים אותם" שוב לחצי כלומר נקבל ארבעה מערכים בגודל 2.
+      <br>
+      ברגע שהגענו למערכים בגודל 2 אנו נעשה השוואות
+      <br>
+      (אם משהו לא מובן בחלק הזה, אנו ממליצים לחזור לדף <a class="recursion" href="recursion.html">רקורסיה</a> ולנסות
+      להבין
+      קצת יותר לעומק על איך רקורסיה עובדת).
+      <br>
+      <br>
+      אחרי שסיימנו "לחצות" את המערכים ועשינו את ההשוואות הראשונות אנו כעת מתחילים עם פעולת המיזוג בין
+      <br>
+      המערכים , כלומר מתוך ארבעת המערכים בגודל 2 אנו עכשיו מתחילים למזג ביניהם בצורה הבאה :
+      <br>
+      השוואה תתבצע בצורה הבאה – לשם הנוחות נקרא למערכים שלנו א' וב'.
+      <br>
+      האיבר באינדקס 0 של מערך א' אל מול האיבר באינדקס 0 של מערך ב'.
+      <br>
+      האינדקס של הקטן מבין הערכים יתקדם (כלומר, אם היה לנו במערך א' אינדקס 0 את הערך 8 אל מול מערך ב' באינדקס 0 שבו 6
+      – האינדקס של מערך ב' יתקדם).
+      <br>
+      לאחר שאחד מהמערכים שלנו הסתיים (כלומר, האינדקס שלו חרג מגבולות גודל המערך) , תיעשה העתקה של שאר האיברים שנותרו
+      במערך השני (כמובן, תוך כדי שמירה על המיון).
+      <br>
+      נסביר במילים את מה שקורה בחלק הזה ולאחר מכן נראה דוגמה:
+      <br>
+      <br>
+      באופן רקורסיבי - פירקנו את כל המערך שלנו לתתי מערכים בגודל 2.
+      <br>
+      לאחר מכן, ביצענו מיון על המערכים הללו.
+      <br>
+      לאחר מכן, מיזגנו בין מערכים כדי לחזור לגודל 4 – תוך כדי שמירה על המיון.
+      <br>
+      בשלב הבא , אנו חוזרים למערך שלם בגודל 8 – ומכיוון שבכל תת שלב במיזוג המערכים שלנו היו ממוינים אז גם
+      <br>
+      המערך השלם שלנו הוא ממוין.
+      <br>
+      ובכך מיינו את המערך.
+      <br>
+      <br>
+      דוגמה לביצוע:
+      <br>
+      <img src="assest/tableForMergeSort/1.png" alt="">
+      <br>
+      <br>
+      התחלנו עם מערך בגודל 8 וכעת אנו נחצה את המערך לשני מערכים ונקבל:
+      <br>
+      <img src="assest/tableForMergeSort/3.png" alt=""> <img src="assest/tableForMergeSort/2.png" alt="">
+      <br>
+      את שני המערכים שלנו נחצה שוב ונקבל:
+      <br>
+      <img src="assest/tableForMergeSort/4.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנו נתחיל בהשוואות:
+      <br>
+      <img src="assest/tableForMergeSort/5.png" alt="">
+      <br>
+      מערך א' – 2 קטן מ16 ולכן יהיה באינדקס 0 , 16 גדול מ 2 ולכן יהיה באינדקס 1.
+      <br>
+      מערך ב' – 4 קטן מ7 ולכן יהיה באינדקס 0 , 7 גדול מ 4 ולכן יהיה באינדקס 1.
+      <br>
+      <img src="assest/tableForMergeSort/6.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנו נתחיל להשוות בין שני המערכים האלה ולהכניס אותם לתוך מערך בגודל 4 (כאן מתבצע המיזוג).
+      נשווה את שני האיברים הראשונים בכל מערך (אינדקס 0) ונגלה ש2 קטן מ4 ולכן נכניס את 2 לתא הראשון(אינדקס 0) ונקדם את
+      האינדקס של מערך א':
+      <br>
+      <img src="assest/tableForMergeSort/7.png" alt="">
+      <br>
+      נמשיך באותה הצורה:
+      מערך א' – האיבר באינדקס 1 (16) גדול מהאיבר באינדקס 0 (4) של המערך השני, ולכן נכניס את 4 לתוך המערך החדש שלנו,
+      ונקדם את האינדקס של מערך ב'.
+      <br>
+      <img src="assest/tableForMergeSort/8.png" alt="">
+      <br>
+      נמשיך בצורה הזאת עד לקבלת:
+      <br>
+      <img src="assest/tableForMergeSort/9.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת סיימנו עם החלק השמאלי של המערך ועכשיו נעבור לחלק הימני של מערך ונבצע בדיוק את אותן הפעולות.
+      <br>
+      המערכים שלנו הינם המערכים :
+      <br>
+      <img src="assest/tableForMergeSort/10.png" alt="">
+      <br>
+      אחרי ההשוואות אצל כל אחד המערכים שלנו יראו ככה :
+      <br>
+      <img src="assest/tableForMergeSort/11.png" alt="">
+      <br>
+      כאשר אנו נכניס אותם למערך חדש אנו נקבל את המערך הבא:
+      <br>
+      <img src="assest/tableForMergeSort/12.png" alt="">
+      <br>
+      <br>
+      <br>
+      נותרנו עם שני מערכים ממויינים בגודל 4 וכל שנותר לעשות הוא למזג אותם.
+      המערכים הם:
+      <br>
+      <img src="assest/tableForMergeSort/13.png" alt="">
+      <br>
+      <br>
+      <br>
+      כמו שעשינו קודם לכן, ניצור מיזוג בין שני המערכים האלו לתוך מערך בגודל 8:
+      (נבדוק אינדקס מול אינדקס ונקדם את האינדקס שערך איברו היה הנמוך יותר).
+      <br>
+      <img src="assest/tableForMergeSort/14.png" alt="">
+      <br>
+      <br>
+      <br>
+      דוגמה לקוד של מיון מיזוג:
+      <br>
+      זה דוגמה לקוד שמבצע את חציית המערך ל2 חלקים – חלק שמאלי וחלק ימני.
+      <br>
+      רואים שהקוד הזה בנוי כרקורסיה וזו הדרך לבצע את המיון הזה.
+      <br>
+      <!--CODE
       
           void merge(int *arr, int left_side, int middle, int right_side)
          {
@@ -229,7 +231,7 @@
         END CODE-->
 
 
-    <!--CODE
+      <!--CODE
 
         void mergeSort(int *arr, int left_side, int right_side
         {
@@ -244,7 +246,7 @@
         }
                
          END CODE-->
-  </p>
+    </p>
 
 
 
