--- a/oneDimLoops.html
+++ b/oneDimLoops.html
@@ -25,16 +25,16 @@
 </head>
 
 <body class="bg-oneAndHalf scrollbar scrollbar_style">
-  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
     <a href="printAndScan.html">קלט ופלט</a>
     <a href="mathOperator.html">אופרטורים חשבוניים</a>
     <a href="statments.html">משפטי בקרה</a>
-    <a href="oneDimLoops.html">לולאות</a>
+    <a href="oneDimLoops.html"><span class="colorcheck">לולאות</span></a>
     <a href="twoDimLoops.html">לולאות דו ממדיות</a>
     <a href="casting.html">casting </a>
     <a href="sizeOf.html">sizeof</a>
@@ -45,19 +45,18 @@
     <a href="doublePointer.html">מצביע כפול</a>
     <a href="arrays.html">מערכים</a>
     <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
+  <section id="main" onclick="openOrCloseNav(0)">
 
-  <section id="main">
-
-    <h1 class="head-left">Lets learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
+    <h1 class="head-left">Let's learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
     <h1 class="head-right">לולאות</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
 
     <div class="First-Para">
@@ -97,7 +96,7 @@
       <div class="col-md-6">
         <div class="para">
           <p>
-            דוגמה ללולאת for:
+            דוגמה ללולאת for:<br>
             במקום לרשום:
           </p>
         </div>
@@ -108,14 +107,14 @@
         <figure class="code">
 
           <figcaption id="example1-caption">CODE 1:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.io&gt;</u>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>void</b> main()
 {
-    printf(<u>"1"</u>);
-    printf(<u>"2"</u>);
-    printf(<u>"3"</u>);
-    printf(<u>"4"</u>);
-    printf(<u>"5"</u>);
+  printf(<u>"1"</u>);
+  printf(<u>"2"</u>);
+  printf(<u>"3"</u>);
+  printf(<u>"4"</u>);
+  printf(<u>"5"</u>);
 }    
             </code></pre>
         </figure>
@@ -138,12 +137,11 @@
             נוכל לרשום:
             <br>
             אם נסתכל על שורת הקוד השנייה נוכל לראות שלושה דברים:
-            <br>
-            1. תנאי התחלה (i=0): מראה לנו מאיפה להתחיל את הספירה.
-            <br>
-            2. תנאי עצירה (i &lt; 5): מראה לנו מתי עלינו לעצור. <br>
-            3. מהו השינוי (i++): מראה לנו שבכל סיבוב של הלולאה (איטרציה) אנו מגדילים את המשתנה i באחד בדיוק.
-
+            <ol>
+              <li>תנאי התחלה (i=0): מראה לנו מאיפה להתחיל את הספירה.</li>
+              <li>תנאי עצירה (i &lt; 5): מראה לנו מתי עלינו לעצור.</li>
+              <li>מהו השינוי (i++): מראה לנו שבכל סיבוב של הלולאה (איטרציה) אנו מגדילים את המשתנה i באחד בדיוק.</li>
+            </ol>
           </p>
 
 
@@ -159,7 +157,8 @@
 
         <figure class="code">
           <figcaption id="example1-caption">CODE 2:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><b>void</b> main()
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+<b>void</b> main()
 {  
   <b>int</b> i;
   <b>for</b>(i=0 ; i &lt; 5 ;i++)
@@ -205,10 +204,11 @@
 
         <figure class="code">
           <figcaption id="example1-caption">CODE 3:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><b>void</b> main()
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+<b>void</b> main()
 {  
   <b>int</b> flag = 1 , counter = 0;
-  <b>while</b>(flag != 0)
+  <b>while</b> (flag != 0)
   {
     <b>if</b>(10 &lt;= counter)
     {
