--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 <body class="bg scrollbar scrollbar_style">
 
-  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.html">מי אנחנו?</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
+    <a href="index.html"><span class="colorcheck">מי אנחנו?</span></a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
     <a href="printAndScan.html">קלט ופלט</a>
@@ -45,21 +45,21 @@
     <a href="doublePointer.html">מצביע כפול</a>
     <a href="arrays.html">מערכים</a>
     <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <section id="main">
-    <h1 class="head-left">Lets learn C</h1>
+  <section id="main" onclick="openOrCloseNav(0)">
+    <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">מי אנחנו?</h1>
 
     <div class="First-Para">
-      <p>היי, ברוכים הבאים לאתר שלנו Lets learn C.
+      <p>היי, ברוכים הבאים לאתר שלנו Let's learn C.
         <br>
         אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
         <br>
