--- a/insertionSort.html
+++ b/insertionSort.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Lets learn C: insertionSort</title>
+  <title>Let's learn C: insertionSort</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -26,9 +26,9 @@
 </head>
 
 <body class="bg-five scrollbar scrollbar_style">
-  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -46,122 +46,127 @@
     <a href="doublePointer.html">מצביע כפול</a>
     <a href="arrays.html">מערכים</a>
     <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
-    <a href="insertionSort.html">מיון הכנסה</a>
+    <a href="insertionSort.html"><span class="colorcheck">מיון הכנסה</span></a>
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <h1 class="top-left">Lets learn C</h1>
+  <section id="main" onclick="openOrCloseNav(0)">
+    <h1 class="top-left">Lets learn C</h1>
 
-  <h2 class="top-right-head">מיון הכנסה</h2>
+    <h2 class="top-right-head">מיון הכנסה</h2>
 
-  <p class="top-right">
-    מיון הכנסה נחשב למיון "מבוסס השוואות" והוא עובד בצורה הבאה.
-    <br>
-    <br>
-    ראשית, אנו מתחילים מתא מספר אחד במערך (כלומר התא השני – כפי שזכור לנו הספירה בתכנות מתבצעת לעיתים קרובות מאוד מ0).
-    אנו מכניסים את הערך שבתוך התא אל תוך משתנה עזר שנקרא לו temp ולאחר מכן נתחיל לבצע השוואה בין המשתנה temp לבין כל
-    האיברים שנמצאים לפני האיבר הנוכחי שבו אנו נמצאים (כלומר אם עכשיו אנחנו נמצאים בתא j אז אנחנו נבצע את הבדיקות מתא j-1
-    עד לתא 0 כולל).
-    אנו נשתמש כאן ב2 אינדקסיים האחד הוא j שהוא מציין את התא הנוכחי שעליו נמצאים ואינדקס i שתמיד יתחיל מהתא j-1.
-    <br>
-    <br>
-    כאשר אנו עושים את ההשוואה, אם האיבר בתא i-1 גדול יותר מהערך שבתוך המשתנה x אז אנחנו לוקחים את הערך הזה (שגדול יותר
-    מהערך שבתוך המתשנה temp שלנו ) ומכניסים אותו לתא i+1 וממשיכים בבדיקות עד שנעבור את תא מספר אפס או עד שאנחנו נגיע לתא
-    שהערך שבתוכו קטן יותר מהערך שבתוך משתנה temp.
-    <br>
-    <br>
-    כעת נראה איך מתבצע התהליך:
-    <br>
-    המערך ההתחלתי שלנו יכול למשל להיראות כך:
-    <br>
-    <img src="assest/tableForInsertionSort/1.png" alt="">
-    <br>
-    משתנה העזר שלנו temp יכיל כעת את הערך שנמצא בתא מספר 1 במערך שהוא המספר 7.
-    כעת אנחנו מתחילים לבצע את ההשוואה בין הערכים מתא מספר 0 כלפי מטה.
-    בגלל ש 7 גדול מ 2 אז אנחנו יודעים בוודאות שכל האיברים הלאה יהיו קטנים יותר מ 7 והם ממוינים לכן אי צורך לשינוי.
-    <br>
-    <img src="assest/tableForInsertionSort/2.png" alt=""><img src="assest/tableForInsertionSort/3.png" alt="">
-    <br>
-    <br>
-    <br>
-    כעת אנו עוברים ל תא מספר 2 ומכניסים את הערך שלו 4 למשתנה temp ומתחילים השוואות אל מול התאים מצד שמאל של 4.
-    משווים ראשית ל תא מספר 1 ורואים ש 7 גדול מ 4.
-    <br>
-    <img src="assest/tableForInsertionSort/4.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
-    <br>
-    לכן נכניס 7 לתא מספר 2.
-    בשלב זה תא מספר 1 נשאר ללא שינוי.
-    המערך שלנו יראה כך :
-    <br>
-    <img src="assest/tableForInsertionSort/6.png" alt="">
-    <br>
-    <br>
-    עכשיו אנחנו עושים השוואה בין תא מספר 0 למשתנה ה temp ואנחנו רואים ש4 גדול יותר מ 2.
-    <br>
-    <img src="assest/tableForInsertionSort/7.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
-    <br>
-    לכן אנחנו עוצרים כאן את הבדיקות ו4 יכנס לתוך תא מספר 1 (למה תא מספר 1 ? חשוב לזכור שאנחנו השתמשנו כאן ב 2 אינדקסים i
-    ו j האינדקס i תמיד יהיה שווה ל j-1 וכאשר אנחנו הגענו למצב שהערך במשתנה עזר שלנו יותר גדול מהערך שנמצא בתא של המערך
-    אז אנחנו מכניסים את הערך שבתוך משתנה העזר שלנו לi+1 במקרה שלנו i היה שווה ל 0 ו i+1 יתן לנו את תא מספר 1). המערך
-    שלנו יראה כך:
-    <br>
-    <img src="assest/tableForInsertionSort/8.png" alt="">
-    <br>
-    <br>
-    <br>
-    כעת אנחנו נתחיל את הסבב השלישי שלנו ואנו נכניס לתוך המשתנה temp את הערך שנמצא בתוך תא מספר 3 שזה 3 , כעת נתחיל
-    להשוואות את הערך 3 למה שנמצא בתא מספר 2 שזה הערך 7.
-    <br>
-    <img src="assest/tableForInsertionSort/9.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
-    <br>
-    בגלל ש 3 קטן מ 7 אז אנחנו מבצעים החלפה , 7 ייכנס לתא מספר 3 והמערך שלנו יראה כך:
-    <br>
-    <img src="assest/tableForInsertionSort/11.png" alt="">
-    <br>
-    <br>
-    <br>
-    לאחר מכן אנחנו משווים את הערך 3 לתא מספר 1 שהוא הערך 4.
-    <br>
-    <img src="assest/tableForInsertionSort/12.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
-    <br>
-    בגלל ש 3 קטן מ 4 אז גם כאן מתבצע שינוי והמערך שלנו יראה כעת כך:
-    <br>
-    <img src="assest/tableForInsertionSort/13.png" alt="">
-    <br>
-    <br>
-    <br>
-    כל עוד הערך בתוך משתנה העזר שלנו תמיד קטן יותר אז אנחנו מכניסים את הערכים של התאים לתוך i+1. אפשר לראות את זה כמו
-    "הזזה של כל המערך קדימה".
-    <br>
-    לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0.
-    <br>
-    <img src="assest/tableForInsertionSort/14.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
-    <br>
-    ניתן לראות שהערך 3 גדול מהערך 2 ולכן עוצרים כאן את ההשוואות ומכניסים את הערך 3 לתוך תא מספר 1 וכעת המערך שלנו יראה
-    כך:
-    <br>
-    <img src="assest/tableForInsertionSort/15.png" alt="">
-    <br>
-    <br>
-    <br>
-    כעת אנחנו עושים את הסבב הרביעי שלנו וזה גם יהיה האחרון כי הגענו לסוף המערך , לא קשה לראות ש 8 גדול יותר מכל האיברים
-    במערך ולכן כבר על ההשוואה הראשונה של 8 ל 7 אנחנו נבין שהמערך כבר ממוין ולכן אין צורך להמשיך בהשוואות והמערך הסופי
-    שלנו יראה כך:
-    <br>
-    <img src="assest/tableForInsertionSort/16.png" alt="">
-    <br>
-    וכך מתבצע מיון הכנסה.
-    <br>
-    <br>
-    <br>
-    דוגמה לקוד של מיון הכנסה:
-    <br>
-    <!--CODE
+    <p class="top-right">
+      מיון הכנסה נחשב למיון "מבוסס השוואות" והוא עובד בצורה הבאה.
+      <br>
+      <br>
+      ראשית, אנו מתחילים מתא מספר אחד במערך (כלומר התא השני – כפי שזכור לנו הספירה בתכנות מתבצעת לעיתים קרובות מאוד מ0).
+      אנו מכניסים את הערך שבתוך התא אל תוך משתנה עזר שנקרא לו temp ולאחר מכן נתחיל לבצע השוואה בין המשתנה temp לבין כל
+      האיברים שנמצאים לפני האיבר הנוכחי שבו אנו נמצאים (כלומר אם עכשיו אנחנו נמצאים בתא j אז אנחנו נבצע את הבדיקות מתא
+      j-1
+      עד לתא 0 כולל).
+      אנו נשתמש כאן ב2 אינדקסיים האחד הוא j שהוא מציין את התא הנוכחי שעליו נמצאים ואינדקס i שתמיד יתחיל מהתא j-1.
+      <br>
+      <br>
+      כאשר אנו עושים את ההשוואה, אם האיבר בתא i-1 גדול יותר מהערך שבתוך המשתנה x אז אנחנו לוקחים את הערך הזה (שגדול יותר
+      מהערך שבתוך המתשנה temp שלנו ) ומכניסים אותו לתא i+1 וממשיכים בבדיקות עד שנעבור את תא מספר אפס או עד שאנחנו נגיע
+      לתא
+      שהערך שבתוכו קטן יותר מהערך שבתוך משתנה temp.
+      <br>
+      <br>
+      כעת נראה איך מתבצע התהליך:
+      <br>
+      המערך ההתחלתי שלנו יכול למשל להיראות כך:
+      <br>
+      <img src="assest/tableForInsertionSort/1.png" alt="">
+      <br>
+      משתנה העזר שלנו temp יכיל כעת את הערך שנמצא בתא מספר 1 במערך שהוא המספר 7.
+      כעת אנחנו מתחילים לבצע את ההשוואה בין הערכים מתא מספר 0 כלפי מטה.
+      בגלל ש 7 גדול מ 2 אז אנחנו יודעים בוודאות שכל האיברים הלאה יהיו קטנים יותר מ 7 והם ממוינים לכן אי צורך לשינוי.
+      <br>
+      <img src="assest/tableForInsertionSort/2.png" alt=""><img src="assest/tableForInsertionSort/3.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנו עוברים ל תא מספר 2 ומכניסים את הערך שלו 4 למשתנה temp ומתחילים השוואות אל מול התאים מצד שמאל של 4.
+      משווים ראשית ל תא מספר 1 ורואים ש 7 גדול מ 4.
+      <br>
+      <img src="assest/tableForInsertionSort/4.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
+      <br>
+      לכן נכניס 7 לתא מספר 2.
+      בשלב זה תא מספר 1 נשאר ללא שינוי.
+      המערך שלנו יראה כך :
+      <br>
+      <img src="assest/tableForInsertionSort/6.png" alt="">
+      <br>
+      <br>
+      עכשיו אנחנו עושים השוואה בין תא מספר 0 למשתנה ה temp ואנחנו רואים ש4 גדול יותר מ 2.
+      <br>
+      <img src="assest/tableForInsertionSort/7.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
+      <br>
+      לכן אנחנו עוצרים כאן את הבדיקות ו4 יכנס לתוך תא מספר 1 (למה תא מספר 1 ? חשוב לזכור שאנחנו השתמשנו כאן ב 2 אינדקסים
+      i
+      ו j האינדקס i תמיד יהיה שווה ל j-1 וכאשר אנחנו הגענו למצב שהערך במשתנה עזר שלנו יותר גדול מהערך שנמצא בתא של המערך
+      אז אנחנו מכניסים את הערך שבתוך משתנה העזר שלנו לi+1 במקרה שלנו i היה שווה ל 0 ו i+1 יתן לנו את תא מספר 1). המערך
+      שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/8.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנחנו נתחיל את הסבב השלישי שלנו ואנו נכניס לתוך המשתנה temp את הערך שנמצא בתוך תא מספר 3 שזה 3 , כעת נתחיל
+      להשוואות את הערך 3 למה שנמצא בתא מספר 2 שזה הערך 7.
+      <br>
+      <img src="assest/tableForInsertionSort/9.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      <br>
+      בגלל ש 3 קטן מ 7 אז אנחנו מבצעים החלפה , 7 ייכנס לתא מספר 3 והמערך שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/11.png" alt="">
+      <br>
+      <br>
+      <br>
+      לאחר מכן אנחנו משווים את הערך 3 לתא מספר 1 שהוא הערך 4.
+      <br>
+      <img src="assest/tableForInsertionSort/12.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      <br>
+      בגלל ש 3 קטן מ 4 אז גם כאן מתבצע שינוי והמערך שלנו יראה כעת כך:
+      <br>
+      <img src="assest/tableForInsertionSort/13.png" alt="">
+      <br>
+      <br>
+      <br>
+      כל עוד הערך בתוך משתנה העזר שלנו תמיד קטן יותר אז אנחנו מכניסים את הערכים של התאים לתוך i+1. אפשר לראות את זה כמו
+      "הזזה של כל המערך קדימה".
+      <br>
+      לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0.
+      <br>
+      <img src="assest/tableForInsertionSort/14.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      <br>
+      ניתן לראות שהערך 3 גדול מהערך 2 ולכן עוצרים כאן את ההשוואות ומכניסים את הערך 3 לתוך תא מספר 1 וכעת המערך שלנו יראה
+      כך:
+      <br>
+      <img src="assest/tableForInsertionSort/15.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנחנו עושים את הסבב הרביעי שלנו וזה גם יהיה האחרון כי הגענו לסוף המערך , לא קשה לראות ש 8 גדול יותר מכל
+      האיברים
+      במערך ולכן כבר על ההשוואה הראשונה של 8 ל 7 אנחנו נבין שהמערך כבר ממוין ולכן אין צורך להמשיך בהשוואות והמערך הסופי
+      שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/16.png" alt="">
+      <br>
+      וכך מתבצע מיון הכנסה.
+      <br>
+      <br>
+      <br>
+      דוגמה לקוד של מיון הכנסה:
+      <br>
+      <!--CODE
         void insertion_sort(int *arr , int size)
         {
             int  temp , i , j , flag;
@@ -187,13 +192,15 @@
         }
 
       END CODE-->
-    <br>
-    • חשוב לציין שהקוד הזה הוא לא יחיד וקיימות עוד גרסאות עבורו (חלקן אף יעילות יותר)
-    <br>
-    משתנה ה flag אומר לנו אם אנחנו הגענו למצב שבו הערך שבתוך המשתנה temp שלנו גדול יותר מכל הערכים של התאים בצד שמאל או
-    לא , במידה וכן אז אנחנו משנים את הערך של flag לאפס ואז ממשיכים לסבב הבא. במידה ולא אז אנחנו ממשיכים את הבדיקה .
-    i ו j אלו הם האינדקסים שבעזרתם אנחנו זזים במערכים כאשר j מסמל לנו את התא שהערך שלו יכנס למשתנה temp ו-i מציין את כל
-    האיברים שאותם אנחנו נשווה ל temp.
+      <br>
+      • חשוב לציין שהקוד הזה הוא לא יחיד וקיימות עוד גרסאות עבורו (חלקן אף יעילות יותר)
+      <br>
+      משתנה ה flag אומר לנו אם אנחנו הגענו למצב שבו הערך שבתוך המשתנה temp שלנו גדול יותר מכל הערכים של התאים בצד שמאל
+      או
+      לא , במידה וכן אז אנחנו משנים את הערך של flag לאפס ואז ממשיכים לסבב הבא. במידה ולא אז אנחנו ממשיכים את הבדיקה .
+      i ו j אלו הם האינדקסים שבעזרתם אנחנו זזים במערכים כאשר j מסמל לנו את התא שהערך שלו יכנס למשתנה temp ו-i מציין את
+      כל
+      האיברים שאותם אנחנו נשווה ל temp.
 
 </body>
 
