--- a/selectionSort.html
+++ b/selectionSort.html
@@ -24,9 +24,9 @@
 </head>
 
 <body class="bg scrollbar scrollbar_style">
-  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -44,23 +44,22 @@
     <a href="doublePointer.html">מצביע כפול</a>
     <a href="arrays.html">מערכים</a>
     <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
-    <a href="selectionSort.html">מיון בחירה</a>
+    <a href="selectionSort.html"><span class="colorcheck">מיון בחירה</span></a>
     <a href="insertionSort.html">מיון הכנסה</a>
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
+  <section id="main" onclick="openOrCloseNav(0)">
 
+    <h1 class="top-left">Let's learn C</h1>
 
+    <h2 class="top-right-head">NULL</h2>
 
-  <h1 class="top-left">Lets learn C</h1>
-
-  <h2 class="top-right-head">NULL</h2>
-
-  <p class="top-right">
+    <p class="top-right">
 
 
 
